src/Part21Parser.java
// $ANTLR 3.1.3 Mar 18, 2009 10:09:25 Part21.g 2022-05-29 16:40:24


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class Part21Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "EXCHANGE_FILE", "KEYWORD", "USER_DEFINED_STANDARD", "PARAMETER_LIST", "PARAMETER", "ENUMERATION", "HEADER_ENTITY", "HEADER_SECTION", "TYPED_PARAMETER", "UNTYPED_PARAMETER", "NULL_VALUE", "OMITTED_PARAMETER", "LIST", "DATA_SECTION", "ENTITY_INSTANCE_LIST", "ENTITY_INSTANCE", "SIMPLE_ENTITY_INSTANCE", "COMPLEX_ENTITY_INSTANCE", "SIMPLE_RECORD", "SUBSUPER_RECORD", "SIMPLE_RECORD_LIST", "REVERSE_SOLIDUS", "APOSTROPHE", "FILE_DESCRIPTION", "DESCRIPTION", "NAME", "FILE_NAME", "IMPLEMENTATION_LEVEL", "TIME_STAMP", "AUTHOR", "ORGANIZATION", "PREPROCESSOR_VERSION", "ORIGINATING_SYSTEM", "AUTHORIZATION", "FILE_SCHEMA", "SCHEMA_IDENTIFIERS", "FILE_POPULATION", "GOVERNING_SCHEMA", "DETERMINATION_METHOD", "GOVERNED_SECTIONS", "SECTION_LANGUAGE", "SECTION", "DEFAULT_LANGUAGE", "CONTEXT_IDENTIFIERS", "STANDARD_KEYWORD", "STRING", "INTEGER", "REAL", "ENTITY_INSTANCE_NAME", "BINARY", "DIGIT", "HEX", "SIGN", "COMMENT", "UPPER", "SPECIAL", "WS", "LOWER", "'ISO-10303-21;'", "'END-ISO-10303-21;'", "'!'", "'.'", "'HEADER;'", "'ENDSEC;'", "'FILE_DESCRIPTION'", "'('", "','", "')'", "';'", "'FILE_NAME'", "'FILE_SCHEMA'", "'FILE_POPULATION'", "'SECTION_LANGUAGE'", "'SECTION_CONTEXT'", "'DATA'", "'='"
    };
    public static final int APOSTROPHE=26;
    public static final int KEYWORD=5;
    public static final int ENUMERATION=9;
    public static final int FILE_DESCRIPTION=27;
    public static final int TIME_STAMP=32;
    public static final int STANDARD_KEYWORD=48;
    public static final int FILE_NAME=30;
    public static final int SPECIAL=59;
    public static final int COMPLEX_ENTITY_INSTANCE=21;
    public static final int DEFAULT_LANGUAGE=46;
    public static final int SIGN=56;
    public static final int HEADER_SECTION=11;
    public static final int SCHEMA_IDENTIFIERS=39;
    public static final int PARAMETER=8;
    public static final int INTEGER=50;
    public static final int REVERSE_SOLIDUS=25;
    public static final int USER_DEFINED_STANDARD=6;
    public static final int FILE_SCHEMA=38;
    public static final int GOVERNING_SCHEMA=41;
    public static final int NAME=29;
    public static final int SUBSUPER_RECORD=23;
    public static final int DATA_SECTION=17;
    public static final int PREPROCESSOR_VERSION=35;
    public static final int LOWER=61;
    public static final int T__66=66;
    public static final int REAL=51;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__62=62;
    public static final int GOVERNED_SECTIONS=43;
    public static final int T__63=63;
    public static final int LIST=16;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int FILE_POPULATION=40;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int PARAMETER_LIST=7;
    public static final int UNTYPED_PARAMETER=13;
    public static final int BINARY=53;
    public static final int AUTHOR=33;
    public static final int EXCHANGE_FILE=4;
    public static final int ENTITY_INSTANCE_LIST=18;
    public static final int OMITTED_PARAMETER=15;
    public static final int COMMENT=57;
    public static final int TYPED_PARAMETER=12;
    public static final int ORGANIZATION=34;
    public static final int DETERMINATION_METHOD=42;
    public static final int UPPER=58;
    public static final int HEADER_ENTITY=10;
    public static final int SIMPLE_ENTITY_INSTANCE=20;
    public static final int SIMPLE_RECORD=22;
    public static final int DESCRIPTION=28;
    public static final int T__77=77;
    public static final int T__78=78;
    public static final int T__79=79;
    public static final int NULL_VALUE=14;
    public static final int T__73=73;
    public static final int WS=60;
    public static final int EOF=-1;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int ENTITY_INSTANCE=19;
    public static final int SIMPLE_RECORD_LIST=24;
    public static final int IMPLEMENTATION_LEVEL=31;
    public static final int SECTION_LANGUAGE=44;
    public static final int ORIGINATING_SYSTEM=36;
    public static final int DIGIT=54;
    public static final int STRING=49;
    public static final int ENTITY_INSTANCE_NAME=52;
    public static final int HEX=55;
    public static final int CONTEXT_IDENTIFIERS=47;
    public static final int AUTHORIZATION=37;
    public static final int SECTION=45;

    // delegates
    // delegators


        public Part21Parser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public Part21Parser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return Part21Parser.tokenNames; }
    public String getGrammarFileName() { return "Part21.g"; }


    /*
    	public void displayRecognitionError(String[] tokenNames, RecognitionException e)
    	{
    		System.out.println(getErrorHeader(e) + " " + getErrorMessage(e, tokenNames) + " source:" + getSourceName());
    	}
    	protected Object recoverFromMismatchedToken(IntStream input, int ttype, BitSet follow) throws RecognitionException
    	{
    		throw new MismatchedTokenException(ttype, input);
    	}
    	*/



    public static class exchange_file_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "exchange_file"
    // Part21.g:85:1: exchange_file : 'ISO-10303-21;' header_section ( data_section )+ 'END-ISO-10303-21;' -> ^( EXCHANGE_FILE header_section ( data_section )+ ) ;
    public final exchange_file_return exchange_file() throws RecognitionException {
        exchange_file_return retval = new exchange_file_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal1=null;
        Token string_literal4=null;
        header_section_return header_section2 = null;

        data_section_return data_section3 = null;


        Object string_literal1_tree=null;
        Object string_literal4_tree=null;
        RewriteRuleTokenStream stream_62=new RewriteRuleTokenStream(adaptor,"token 62");
        RewriteRuleTokenStream stream_63=new RewriteRuleTokenStream(adaptor,"token 63");
        RewriteRuleSubtreeStream stream_header_section=new RewriteRuleSubtreeStream(adaptor,"rule header_section");
        RewriteRuleSubtreeStream stream_data_section=new RewriteRuleSubtreeStream(adaptor,"rule data_section");
        try {
            // Part21.g:85:15: ( 'ISO-10303-21;' header_section ( data_section )+ 'END-ISO-10303-21;' -> ^( EXCHANGE_FILE header_section ( data_section )+ ) )
            // Part21.g:86:3: 'ISO-10303-21;' header_section ( data_section )+ 'END-ISO-10303-21;'
            {
            string_literal1=(Token)match(input,62,FOLLOW_62_in_exchange_file201);  
            stream_62.add(string_literal1);

            pushFollow(FOLLOW_header_section_in_exchange_file203);
            header_section2=header_section();

            state._fsp--;

            stream_header_section.add(header_section2.getTree());
            // Part21.g:86:34: ( data_section )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==78) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // Part21.g:86:34: data_section
            	    {
            	    pushFollow(FOLLOW_data_section_in_exchange_file205);
            	    data_section3=data_section();

            	    state._fsp--;

            	    stream_data_section.add(data_section3.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            string_literal4=(Token)match(input,63,FOLLOW_63_in_exchange_file208);  
            stream_63.add(string_literal4);



            // AST REWRITE
            // elements: header_section, data_section
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 87:2: -> ^( EXCHANGE_FILE header_section ( data_section )+ )
            {
                // Part21.g:87:5: ^( EXCHANGE_FILE header_section ( data_section )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(EXCHANGE_FILE, "EXCHANGE_FILE"), root_1);

                adaptor.addChild(root_1, stream_header_section.nextTree());
                if ( !(stream_data_section.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_data_section.hasNext() ) {
                    adaptor.addChild(root_1, stream_data_section.nextTree());

                }
                stream_data_section.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "exchange_file"

    public static class keyword_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "keyword"
    // Part21.g:90:1: keyword : ( user_defined_keyword | STANDARD_KEYWORD ) -> ^( KEYWORD ( user_defined_keyword )? ( STANDARD_KEYWORD )? ) ;
    public final keyword_return keyword() throws RecognitionException {
        keyword_return retval = new keyword_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token STANDARD_KEYWORD6=null;
        user_defined_keyword_return user_defined_keyword5 = null;


        Object STANDARD_KEYWORD6_tree=null;
        RewriteRuleTokenStream stream_STANDARD_KEYWORD=new RewriteRuleTokenStream(adaptor,"token STANDARD_KEYWORD");
        RewriteRuleSubtreeStream stream_user_defined_keyword=new RewriteRuleSubtreeStream(adaptor,"rule user_defined_keyword");
        try {
            // Part21.g:90:9: ( ( user_defined_keyword | STANDARD_KEYWORD ) -> ^( KEYWORD ( user_defined_keyword )? ( STANDARD_KEYWORD )? ) )
            // Part21.g:90:11: ( user_defined_keyword | STANDARD_KEYWORD )
            {
            // Part21.g:90:11: ( user_defined_keyword | STANDARD_KEYWORD )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==64) ) {
                alt2=1;
            }
            else if ( (LA2_0==STANDARD_KEYWORD) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // Part21.g:90:12: user_defined_keyword
                    {
                    pushFollow(FOLLOW_user_defined_keyword_in_keyword233);
                    user_defined_keyword5=user_defined_keyword();

                    state._fsp--;

                    stream_user_defined_keyword.add(user_defined_keyword5.getTree());

                    }
                    break;
                case 2 :
                    // Part21.g:90:35: STANDARD_KEYWORD
                    {
                    STANDARD_KEYWORD6=(Token)match(input,STANDARD_KEYWORD,FOLLOW_STANDARD_KEYWORD_in_keyword237);  
                    stream_STANDARD_KEYWORD.add(STANDARD_KEYWORD6);


                    }
                    break;

            }



            // AST REWRITE
            // elements: user_defined_keyword, STANDARD_KEYWORD
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 91:1: -> ^( KEYWORD ( user_defined_keyword )? ( STANDARD_KEYWORD )? )
            {
                // Part21.g:91:4: ^( KEYWORD ( user_defined_keyword )? ( STANDARD_KEYWORD )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(KEYWORD, "KEYWORD"), root_1);

                // Part21.g:91:14: ( user_defined_keyword )?
                if ( stream_user_defined_keyword.hasNext() ) {
                    adaptor.addChild(root_1, stream_user_defined_keyword.nextTree());

                }
                stream_user_defined_keyword.reset();
                // Part21.g:91:36: ( STANDARD_KEYWORD )?
                if ( stream_STANDARD_KEYWORD.hasNext() ) {
                    adaptor.addChild(root_1, stream_STANDARD_KEYWORD.nextNode());

                }
                stream_STANDARD_KEYWORD.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "keyword"

    public static class user_defined_keyword_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "user_defined_keyword"
    // Part21.g:94:1: user_defined_keyword : '!' STANDARD_KEYWORD -> ^( USER_DEFINED_STANDARD STANDARD_KEYWORD ) ;
    public final user_defined_keyword_return user_defined_keyword() throws RecognitionException {
        user_defined_keyword_return retval = new user_defined_keyword_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal7=null;
        Token STANDARD_KEYWORD8=null;

        Object char_literal7_tree=null;
        Object STANDARD_KEYWORD8_tree=null;
        RewriteRuleTokenStream stream_STANDARD_KEYWORD=new RewriteRuleTokenStream(adaptor,"token STANDARD_KEYWORD");
        RewriteRuleTokenStream stream_64=new RewriteRuleTokenStream(adaptor,"token 64");

        try {
            // Part21.g:94:22: ( '!' STANDARD_KEYWORD -> ^( USER_DEFINED_STANDARD STANDARD_KEYWORD ) )
            // Part21.g:94:24: '!' STANDARD_KEYWORD
            {
            char_literal7=(Token)match(input,64,FOLLOW_64_in_user_defined_keyword260);  
            stream_64.add(char_literal7);

            STANDARD_KEYWORD8=(Token)match(input,STANDARD_KEYWORD,FOLLOW_STANDARD_KEYWORD_in_user_defined_keyword262);  
            stream_STANDARD_KEYWORD.add(STANDARD_KEYWORD8);



            // AST REWRITE
            // elements: STANDARD_KEYWORD
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 95:1: -> ^( USER_DEFINED_STANDARD STANDARD_KEYWORD )
            {
                // Part21.g:95:4: ^( USER_DEFINED_STANDARD STANDARD_KEYWORD )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(USER_DEFINED_STANDARD, "USER_DEFINED_STANDARD"), root_1);

                adaptor.addChild(root_1, stream_STANDARD_KEYWORD.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "user_defined_keyword"

    public static class enumeration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "enumeration"
    // Part21.g:98:1: enumeration : '.' STANDARD_KEYWORD '.' -> ^( ENUMERATION STANDARD_KEYWORD ) ;
    public final enumeration_return enumeration() throws RecognitionException {
        enumeration_return retval = new enumeration_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal9=null;
        Token STANDARD_KEYWORD10=null;
        Token char_literal11=null;

        Object char_literal9_tree=null;
        Object STANDARD_KEYWORD10_tree=null;
        Object char_literal11_tree=null;
        RewriteRuleTokenStream stream_STANDARD_KEYWORD=new RewriteRuleTokenStream(adaptor,"token STANDARD_KEYWORD");
        RewriteRuleTokenStream stream_65=new RewriteRuleTokenStream(adaptor,"token 65");

        try {
            // Part21.g:98:13: ( '.' STANDARD_KEYWORD '.' -> ^( ENUMERATION STANDARD_KEYWORD ) )
            // Part21.g:98:15: '.' STANDARD_KEYWORD '.'
            {
            char_literal9=(Token)match(input,65,FOLLOW_65_in_enumeration280);  
            stream_65.add(char_literal9);

            STANDARD_KEYWORD10=(Token)match(input,STANDARD_KEYWORD,FOLLOW_STANDARD_KEYWORD_in_enumeration282);  
            stream_STANDARD_KEYWORD.add(STANDARD_KEYWORD10);

            char_literal11=(Token)match(input,65,FOLLOW_65_in_enumeration284);  
            stream_65.add(char_literal11);



            // AST REWRITE
            // elements: STANDARD_KEYWORD
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 99:1: -> ^( ENUMERATION STANDARD_KEYWORD )
            {
                // Part21.g:99:4: ^( ENUMERATION STANDARD_KEYWORD )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ENUMERATION, "ENUMERATION"), root_1);

                adaptor.addChild(root_1, stream_STANDARD_KEYWORD.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "enumeration"

    public static class header_section_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "header_section"
    // Part21.g:102:1: header_section : 'HEADER;' file_description file_name file_schema ( file_population )? ( section_language )? ( section_context )? 'ENDSEC;' -> ^( HEADER_SECTION file_description file_name file_schema ( file_population )? ( section_language )? ( section_context )? ) ;
    public final header_section_return header_section() throws RecognitionException {
        header_section_return retval = new header_section_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal12=null;
        Token string_literal19=null;
        file_description_return file_description13 = null;

        file_name_return file_name14 = null;

        file_schema_return file_schema15 = null;

        file_population_return file_population16 = null;

        section_language_return section_language17 = null;

        section_context_return section_context18 = null;


        Object string_literal12_tree=null;
        Object string_literal19_tree=null;
        RewriteRuleTokenStream stream_66=new RewriteRuleTokenStream(adaptor,"token 66");
        RewriteRuleTokenStream stream_67=new RewriteRuleTokenStream(adaptor,"token 67");
        RewriteRuleSubtreeStream stream_file_schema=new RewriteRuleSubtreeStream(adaptor,"rule file_schema");
        RewriteRuleSubtreeStream stream_file_population=new RewriteRuleSubtreeStream(adaptor,"rule file_population");
        RewriteRuleSubtreeStream stream_file_name=new RewriteRuleSubtreeStream(adaptor,"rule file_name");
        RewriteRuleSubtreeStream stream_file_description=new RewriteRuleSubtreeStream(adaptor,"rule file_description");
        RewriteRuleSubtreeStream stream_section_language=new RewriteRuleSubtreeStream(adaptor,"rule section_language");
        RewriteRuleSubtreeStream stream_section_context=new RewriteRuleSubtreeStream(adaptor,"rule section_context");
        try {
            // Part21.g:102:16: ( 'HEADER;' file_description file_name file_schema ( file_population )? ( section_language )? ( section_context )? 'ENDSEC;' -> ^( HEADER_SECTION file_description file_name file_schema ( file_population )? ( section_language )? ( section_context )? ) )
            // Part21.g:102:18: 'HEADER;' file_description file_name file_schema ( file_population )? ( section_language )? ( section_context )? 'ENDSEC;'
            {
            string_literal12=(Token)match(input,66,FOLLOW_66_in_header_section302);  
            stream_66.add(string_literal12);

            pushFollow(FOLLOW_file_description_in_header_section304);
            file_description13=file_description();

            state._fsp--;

            stream_file_description.add(file_description13.getTree());
            pushFollow(FOLLOW_file_name_in_header_section306);
            file_name14=file_name();

            state._fsp--;

            stream_file_name.add(file_name14.getTree());
            pushFollow(FOLLOW_file_schema_in_header_section308);
            file_schema15=file_schema();

            state._fsp--;

            stream_file_schema.add(file_schema15.getTree());
            // Part21.g:102:67: ( file_population )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==75) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // Part21.g:102:67: file_population
                    {
                    pushFollow(FOLLOW_file_population_in_header_section310);
                    file_population16=file_population();

                    state._fsp--;

                    stream_file_population.add(file_population16.getTree());

                    }
                    break;

            }

            // Part21.g:102:84: ( section_language )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==76) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // Part21.g:102:84: section_language
                    {
                    pushFollow(FOLLOW_section_language_in_header_section313);
                    section_language17=section_language();

                    state._fsp--;

                    stream_section_language.add(section_language17.getTree());

                    }
                    break;

            }

            // Part21.g:102:102: ( section_context )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==77) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // Part21.g:102:102: section_context
                    {
                    pushFollow(FOLLOW_section_context_in_header_section316);
                    section_context18=section_context();

                    state._fsp--;

                    stream_section_context.add(section_context18.getTree());

                    }
                    break;

            }

            string_literal19=(Token)match(input,67,FOLLOW_67_in_header_section320);  
            stream_67.add(string_literal19);



            // AST REWRITE
            // elements: file_population, file_schema, section_context, file_name, section_language, file_description
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 103:2: -> ^( HEADER_SECTION file_description file_name file_schema ( file_population )? ( section_language )? ( section_context )? )
            {
                // Part21.g:103:5: ^( HEADER_SECTION file_description file_name file_schema ( file_population )? ( section_language )? ( section_context )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(HEADER_SECTION, "HEADER_SECTION"), root_1);
